# vision-rover-ros2

./: README.md  settings.txt
Documentation/AE/: stage 02.aep
arduino/pi-arduino-serial/01-test-arduino-motors/: 01-test-arduino-motors.ino
arduino/pi-arduino-serial/02-move-serial-test/: 02-move-serial-test.ino
arduino/test-arduino-motors/: test-arduino-motors.ino
cpp-test/: Makefile  moc_screen.cpp  screen  screen.cpp  screen.h  screen.pro  test
install/: local_setup.sh  setup.sh
install/my_package/share/ament_index/resource_index/package_run_dependencies/: my_package
install/my_package/share/ament_index/resource_index/parent_prefix_path/: my_package
install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_package/share/my_package/cmake/: my_packageConfig-version.cmake  my_packageConfig.cmake
install/my_package/share/my_package/environment/: ament_prefix_path.dsv  path.dsv
install/my_package/share/my_package/launch/: listener.launch.py  talker.launch.py
my_package/: CMakeLists.txt
my_package/launch/: talker.launch.py
my_package/scripts/: motor_controller.py
src/my_package/launch/: listener.launch.py  talker.launch.py
